@@ -175,6 +175,7 @@ since 1999.  If I missed your name, let me know.
 * Emanuel Massano
 * Richard Mayhew
 * Mike McHenry
+* Gordon Messmer
 * Lars Michelson
 * Martin Mielke
 * Christian Mies
